--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,5 @@
 PORT=5000
 MONGO_URI=mongodb+srv://sonawan23bcs143:ertR1GFXFImeIM2w@cluster0.t5o3z.mongodb.net/notedata?retryWrites=true&w=majority&appName=Cluster0
 # ertR1GFXFImeIM2w
+
+#?dvdnvssnckdsvkccurisn?
